# swarm_cruise_control

./: README.md
.gitnexus/: lbug.wal
swarm_controller/: .gitignore  package.xml  setup.py
swarm_controller/config/: config.rviz  logging_topics.yaml  params2.yaml  params3.yaml  params_pacemaker.yaml  params_simulator.yaml  params_swarm_acc.yaml  params_swarm_acc_kin.yaml
swarm_controller/docs/: future_work.md  implementation_log.md  mpc_math.md  swarm_acc_mpc.md
swarm_controller/launch/: pacemaker_controller.launch.py  simulator.launch.py  swarm_controller2.launch.py  swarm_controller3.launch.py
swarm_controller/swarm_controller/: pacemaker_controller.py  peer_localization.py  simulator.py  swarm_acc_kin_mpc_node.py  swarm_acc_mpc_node.py  swarm_controller.py
swarm_controller/swarm_controller/submodules/: logs.py  swarm.py  swarm_acc_kin_mpc.py  swarm_acc_mpc.py  swarm_logic.py  transform_3d.py
swarm_controller/test/: test_swarm_acc_kin_mpc.py  test_swarm_acc_mpc.py
swarm_msgs/: CMakeLists.txt  package.xml
swarm_msgs/msg/: Telemetry.msg
trajectory_drawer/: .gitignore  README.md  package.xml  setup.cfg  setup.py
trajectory_drawer/trajectory_drawer/: draw.py
